--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -67,41 +67,8 @@
     100% { opacity: 1; }
 }
 
-@media(max-width:768px){
-    .person{
-        align-items: center;
-    }
-    .person img{
-        margin-top: 120px;
-        width: 260px;
-    }
-    .person h1{
-        margin-top: 50px;
-        width: 90%;
-        font-size: 45px;
-    }
-    .person p{
-        width: 60%;
-        font-size: 18px;
-        line-height: 28px;
-        margin: 10px 0px;
-    }
-    .person-action{
-        gap: 16px;
-        font-size: 18px;
-        font-weight: 500;
-        margin-bottom: 50px;
-    }
-    .person-connect{
-        padding: 20px 30px;
-        border-radius: 40px;
-    }
-    .person-resume{
-        padding: 20px 50px;
-        border-radius: 40px;
-    }
-}
-@media (max-width: 480px) {
+/* Küçük ekranlar (mobil) */
+@media(max-width:480px){
     .person img {
         width: 180px;
         margin-top: 100px;
@@ -137,7 +104,45 @@
         font-size: 32px;
     }
 }
-@media (max-width: 1024px) and (min-width: 769px) {
+
+/* Orta küçük ekranlar (tablet altı) */
+@media(max-width:768px) and (min-width:481px){
+    .person{
+        align-items: center;
+    }
+    .person img{
+        margin-top: 120px;
+        width: 260px;
+    }
+    .person h1{
+        margin-top: 50px;
+        width: 90%;
+        font-size: 45px;
+    }
+    .person p{
+        width: 60%;
+        font-size: 18px;
+        line-height: 28px;
+        margin: 10px 0px;
+    }
+    .person-action{
+        gap: 16px;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 50px;
+    }
+    .person-connect{
+        padding: 20px 30px;
+        border-radius: 40px;
+    }
+    .person-resume{
+        padding: 20px 50px;
+        border-radius: 40px;
+    }
+}
+
+/* Tablet ve küçük masaüstü arası */
+@media (min-width:769px) and (max-width:1023px) {
     .person img {
         margin-top: 100px;
         width: 220px;
@@ -171,5 +176,80 @@
 
     .blinking-cursor {
         font-size: 36px;
+    }
+}
+
+/* Küçük masaüstü - orta masaüstü (1024px - 1439px) */
+@media (min-width: 1024px) and (max-width: 1439px) {
+    .person img {
+        margin-top: 80px;
+        width: 280px;
+    }
+
+    .person h1 {
+        font-size: 48px;
+        width: 75%;
+        margin-top: 60px;
+    }
+
+    .person p {
+        width: 65%;
+        font-size: 20px;
+        line-height: 32px;
+    }
+
+    .person-action {
+        gap: 30px;
+        font-size: 20px;
+        margin-top: 30px;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+
+    .person-connect,
+    .person-resume {
+        padding: 22px 50px;
+        font-size: 18px;
+        border-radius: 50px;
+    }
+
+    .blinking-cursor {
+        font-size: 40px;
+    }
+}
+
+/* Büyük masaüstü ve üzeri (1440px ve üstü) */
+@media (min-width: 1440px) {
+    .person img {
+        margin-top: 50px;
+        width: 20%;
+    }
+
+    .person h1 {
+        font-size: 40px;
+        width: 70%;
+        margin-top: 0;
+    }
+
+    .person p {
+        width: 70%;
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .person-action {
+        gap: 25px;
+        font-size: 20px;
+        margin-top: 20px;
+    }
+
+    .person-connect,
+    .person-resume {
+        padding: 20px 30px;
+        border-radius: 50px;
+    }
+
+    .blinking-cursor {
+        font-size: 40px;
     }
 }
