--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -124,6 +124,7 @@
         font-size: 18px;
         line-height: 28px;
         margin: 10px 0px;
+        text-align: justify;
     }
     .person-action{
         gap: 16px;
@@ -158,6 +159,7 @@
         width: 70%;
         font-size: 18px;
         line-height: 28px;
+        text-align: justify;
     }
 
     .person-action {
@@ -196,6 +198,7 @@
         width: 65%;
         font-size: 20px;
         line-height: 32px;
+        text-align: justify;
     }
 
     .person-action {
