--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -143,11 +143,12 @@
         font-size: 32px;
         padding: 0;
         text-align: center;
+        justify-content: center;
     }
     .services-title img {
         position: absolute;
         top: 15px;
-        left: -40px;
+        left: -35px;
         bottom: 0;
         width: 40px;
         height: auto;
@@ -175,7 +176,7 @@
         max-width: 100%;
     }
     .services-readmore {
-        justify-content: flex-start;
+        justify-content: center;
         gap: 15px;
     }
     .services-readmore p {
@@ -212,6 +213,9 @@
     }
     .services-readmore img {
         width: 20px;
+        margin-top: auto;
+        justify-content: center;
+        align-items: center;
     }
     .services-container {
         grid-template-columns: 1fr 1fr;
