--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -42,17 +42,21 @@
     background: linear-gradient(267deg, #00ff00, #00BFFF);
     cursor: pointer;
 }
-.person-resume{
+a.person-resume{
     padding: 20px 60px;
     border-radius: 50px;
     border: 2px solid #fff;
     cursor: pointer;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 .person-connect:hover{
     border: 2px solid #fff;
 }
-.person-resume:hover{
+a.person-resume:hover{
     border-color: #00ff00;
+    text-decoration: none;
 }
 .blinking-cursor {
     font-weight: 100;
@@ -93,7 +97,7 @@
     }
 
     .person-connect,
-    .person-resume {
+    a.person-resume {
         width: 80%;
         text-align: center;
         padding: 16px;
@@ -136,7 +140,7 @@
         padding: 20px 30px;
         border-radius: 40px;
     }
-    .person-resume{
+    a.person-resume{
         padding: 20px 50px;
         border-radius: 40px;
     }
@@ -171,7 +175,7 @@
     }
 
     .person-connect,
-    .person-resume {
+    a.person-resume {
         padding: 18px 32px;
         font-size: 17px;
     }
@@ -210,7 +214,7 @@
     }
 
     .person-connect,
-    .person-resume {
+    a.person-resume {
         padding: 22px 50px;
         font-size: 18px;
         border-radius: 50px;
@@ -238,6 +242,7 @@
         width: 70%;
         font-size: 20px;
         line-height: 30px;
+        text-align: justify;
     }
 
     .person-action {
@@ -247,7 +252,7 @@
     }
 
     .person-connect,
-    .person-resume {
+    a.person-resume {
         padding: 20px 30px;
         border-radius: 50px;
     }
