--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -103,6 +103,7 @@
     }
     .navbar img {
         width: 180px;
+        margin-right: 20px;
     }
     .nav-menu li img {
         width: 85px;
@@ -110,6 +111,7 @@
     .nav-connect {
         padding: 16px 35px;
         font-size: 15px;
+        margin-left: 15px;
     }
 }
 
